# micro-scale

./: .gitignore  .gitmodules  README.md
kubernetes/: configs.yml  deployment.yml  service.yml
schema/: micro-scale_full-database-schema_v1.dbm  micro-scale_microservices-schema_v1.drawio  micro-scale_microservices-schema_v2.drawio
services/storage/: pyproject.toml
services/users/: config.py  database.py  main.py  models.py  oauth2.py  pyproject.toml  schemas.py  utils.py
services/worker/: pyproject.toml
